--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ RAW_DATA_PATH=./data/raw/
 PROCESSED_DATA_PATH=./data/processed/
 TRAINING_FILE_NAME=Training.csv
 TESTING_FILE_NAME=Testing.csv
+
+LOGISTIC_REGRESSION_PG=.src/config/logistic_regression_pg.json
+RANDOM_FOREST_PG=.src/config/random_forest_pg.json
+KNN_PG=.src/config/knn_pg.json
+NEURAL_NET_PG=.src/config/neural_net_pg.json
