add experiment tuning, and 4 models to test

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ PROCESSED_DATA_PATH=./data/processed/
 TRAINING_FILE_NAME=Training.csv
 TESTING_FILE_NAME=Testing.csv
 
-LOGISTIC_REGRESSION_PG=.src/config/logistic_regression_pg.json
-RANDOM_FOREST_PG=.src/config/random_forest_pg.json
-KNN_PG=.src/config/knn_pg.json
-NEURAL_NET_PG=.src/config/neural_net_pg.json
+ARTIFACTS_DIR="./models/"
+
+LOGISTIC_REGRESSION_PG=./src/config/logistic_regression_pg.json
+RANDOM_FOREST_PG=./src/config/random_forest_pg.json
+KNN_PG=./src/config/knn_pg.json
+NEURAL_NET_PG=./src/config/neural_net_pg.json
